testbed/test/cruise/compiler/expected/Private_Member_Classes.txt
Private_Member_Classes.ump:13: error: id has private access in Class4
            return c4.id;
                     ^
1 error